[package]
name = "fun"
version = "0.1.0"
authors = ["Dave Voutila <voutilad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0", features = ["unstable", "attributes"] }
futures = { version = "0.3.1", features = ["thread-pool"] }

